--- a/ExpertMed/Views/Appointment/AppointmentList.cshtml
+++ b/ExpertMed/Views/Appointment/AppointmentList.cshtml
@@ -27,22 +27,26 @@
         <div class="card">
             <div class="card-header">
                 <h5 class="card-title mb-0">Appointment List</h5>
-                <div class="btn-group mt-3" role="group">
+                <div class="btn-group mt-3" role="group" style="text-align:center">
                     <button type="button" class="btn btn-soft-success @(ViewBag.CurrentStatus == 0 ? "active" : "")"
                             onclick="filterAppointments(0)">
-                        Paid
+                        Pagadas
                     </button>
                     <button type="button" class="btn btn-soft-warning @(ViewBag.CurrentStatus == 1 ? "active" : "")"
                             onclick="filterAppointments(1)">
-                        Active
+                        Activas
                     </button>
                     <button type="button" class="btn btn-soft-danger @(ViewBag.CurrentStatus == 2 ? "active" : "")"
                             onclick="filterAppointments(2)">
-                        Canceled
+                        Canceladas
                     </button>
                     <button type="button" class="btn btn-soft-info @(ViewBag.CurrentStatus == 3 ? "active" : "")"
                             onclick="filterAppointments(3)">
-                        Follow-up
+                        Seguimiento
+                    </button>
+                    <button type="button" class="btn btn-soft-dark @(ViewBag.CurrentStatus == 4 ? "active" : "")"
+                            onclick="filterAppointments(4)">
+                        Finalizadas
                     </button>
                 </div>
 
@@ -53,12 +57,12 @@
                                 <th hidden>ID</th>
                                 @if (perfilId == 1 || perfilId == 3)
                                 {
-                                    <th>Doctor Name</th>
+                                    <th>Nombre del médico</th>
                                 }
-                                <th>Date of Appointment</th>
-                                <th>Patient Name</th>
-                                <th>Status of Appointment</th>
-                                <th>Actions</th>
+                                <th>Fecha de la cita</th>
+                                <th>Nombre del paciente</th>
+                                <th>Estado de la cita</th>
+                                <th>Acciones</th>
                             </tr>
                         </thead>
 
@@ -78,19 +82,19 @@
                                         @{
                                             var (statusClass, statusText) = appointment.AppointmentStatus switch
                                             {
-                                                0 => ("bg-success", "Paid"),
-                                                1 => ("bg-warning", "Active"),
-                                                2 => ("bg-danger", "Canceled"),
-                                                3 => ("bg-info", "Follow-up"),
-                                                _ => ("bg-secondary", "Unknown")
+                                                0 => ("bg-success", "Pagadas"),
+                                                1 => ("bg-warning", "Activas"),
+                                                2 => ("bg-danger", "Canceladas"),
+                                                3 => ("bg-info", "Seguimiento"),
+                                                4 => ("bg-dark", "Finalizadas")
                                             };
                                         }
                                         <span class="badge @statusClass">@statusText</span>
                                     </td>
                                     <td>
-                                        @if (appointment.AppointmentStatus == 0 || appointment.AppointmentStatus == 2)
+                                        @if (appointment.AppointmentStatus == 4 || appointment.AppointmentStatus == 2)
                                         {
-                                            <!-- Si la cita está pagada o cancelada, deshabilitar el botón -->
+                                            <!-- Si la cita está  cancelada, deshabilitar el botón -->
                                             <span class="btn btn-sm btn-soft-secondary" style="pointer-events: none;">
                                                 <i class="ri-edit-line"></i> Review
                                             </span>
@@ -100,7 +104,7 @@
                                             <!-- Si la cita está activa o en seguimiento, mostrar el botón -->
                                             <a href="#" class="btn btn-sm btn-soft-info"
                                                data-bs-toggle="modal" data-bs-target="#optionModal"
-                                               onclick="openOptionModal(@appointment.AppointmentId,@appointment.AppointmentConsultationid)">
+                                               onclick="openOptionModal(@appointment.AppointmentId,@appointment.AppointmentStatus)">
                                                 <i class="ri-edit-line"></i> Review
                                             </a>
                                         }
@@ -121,67 +125,71 @@
 
 
 
-<!--Modal opciones cita-->
+<!-- Modal opciones cita -->
 <div class="modal flip" id="optionModal" tabindex="-1" aria-labelledby="exampleModalgridLabel" aria-modal="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <!-- Hidden input to store AppointmentId -->
-            <input type="hidden" id="appointmentIdInput" name="AppointmentId" />
-            <input type="hidden" id="perfiltIdInput" value="@perfilId" name="AppointmentId" />
-            <input type="hidden" id="appointmentConsultationId" name="AppointmenConsultationtId" />
+            <!-- Input oculto para el estado -->
+            <input type="hidden" id="appointmentIdInput" name="appointmentIdInput" />
+            <input type="hidden" id="appointmentStatus" name="AppointmentStatus" />
+            <!-- Otros inputs ocultos... -->
 
             <div class="modal-header">
-                <h5 class="modal-title" id="optionModal">What do you want to do on this appointment?</h5>
+                <h5 class="modal-title">¿Qué desea hacer con esta cita?</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
 
             <div class="modal-body">
                 <div class="row g-3">
-                    <!-- Buttons Group -->
-                    <div class="col-4">
+                    <!-- Botones con contenedores identificados -->
+                    <div class="col-4" id="rescheduleCol">
                         <button type="button" class="btn btn-soft-info btn-label btn-sm w-100 waves-effect waves-light"
                                 onclick="openRescheduleModal()">
-
-                            <i class="ri-user-smile-line label-icon align-middle fs-16 me-2"></i> Reschedule appointment
-
+                            <i class="ri-user-smile-line label-icon align-middle fs-16 me-2"></i> Reagendar Cita
                         </button>
                     </div>
 
-                    <div class="col-4">
+                    <div class="col-4" id="cancelCol">
                         <button type="button" class="btn btn-soft-danger btn-label btn-sm w-100 waves-effect waves-light"
                                 onclick="cancelAppointment()">
-                            <i class="ri-error-warning-fill label-icon align-middle fs-16 me-2"></i> Cancel appointment
+                            <i class="ri-error-warning-fill label-icon align-middle fs-16 me-2"></i> Cancelar Cita
                         </button>
                     </div>
 
-                    <div class="col-4">
+                    <div class="col-4" id="payCol">
                         <button type="button" class="btn btn-soft-success btn-label btn-sm w-100 waves-effect waves-light"
                                 onclick="payAppointment()">
-                            <i class="ri-secure-payment-line label-icon align-middle fs-16 me-2"></i> Pay appointment
+                            <i class="ri-secure-payment-line label-icon align-middle fs-16 me-2"></i> Pagar cita
                         </button>
                     </div>
 
-                    <div class="col-4">
-                        <button type="button" class="btn btn-soft-dark  btn-label btn-sm w-100  waves-effect waves-light"
+                    <!-- Botón Consulta Normal -->
+                    <div class="col-4" id="startConsultCol">
+                        <button type="button" class="btn btn-soft-dark btn-label btn-sm w-100 waves-effect waves-light"
                                 onclick="startConsultation()">
-                            <i class="las la-file-medical-alt label-icon align-middle fs-16 me-2"></i> Start consultation
+                            <i class="las la-file-medical-alt label-icon align-middle fs-16 me-2"></i> Empezar Consulta
                         </button>
                     </div>
 
-                </div><!--end row-->
+                    <!-- Botón Consulta Seguimiento -->
+                    <div class="col-4" id="startFollowupCol">
+                        <button type="button" class="btn btn-soft-dark btn-label btn-sm w-100 waves-effect waves-light"
+                                onclick="startFollowupConsultation()">
+                            <i class="las la-file-medical-alt label-icon align-middle fs-16 me-2"></i> Empezar Consulta Seguimiento
+                        </button>
+                    </div>
+                </div>
             </div>
-
         </div>
     </div>
 </div>
-
 <!-- Modal agendar cita disponibles -->
 <div class="modal flip" id="appointmentModalgrid" tabindex="-1" aria-labelledby="appointmentModalgridLabel">
     <div class="modal-dialog">
         <div class="modal-content">
 
             <div class="modal-header">
-                <h5 class="modal-title" id="appointmentModalgridLabel"> What do you want to do on this appointment?</h5>
+                <h5 class="modal-title" id="appointmentModalgridLabel"> Que desea hacer con esta cita?</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
 
@@ -195,21 +203,21 @@
                         <input type="hidden" class="form-control" id="doctorUserId"> <!-- Campo de texto para el ID del doctor -->
                     </div>
 
-                   
+
                     <!-- Input de usuarioId y fecha -->
                     <div class="col-xxl-6">
-                        <label for="selectedDate" class="form-label">Select a date</label> <!-- Etiqueta para seleccionar la fecha -->
+                        <label for="selectedDate" class="form-label">Seleccione una fecha</label> <!-- Etiqueta para seleccionar la fecha -->
                         <input type="date" class="form-control" id="selectedDate" required> <!-- Campo de selección de fecha -->
                     </div>
 
                     <div class="col-xxl-6">
-                        <label for="appointmentTime" class="form-label">Your appointment time is:</label> <!-- Etiqueta para la hora de la cita -->
+                        <label for="appointmentTime" class="form-label">La hora de su cita es:</label> <!-- Etiqueta para la hora de la cita -->
                         <input type="time" class="form-control" id="appointmentTime" required> <!-- Campo de selección de la hora de la cita -->
                     </div>
 
                     <div class="col-xxl-6">
                         <button type="button" class="btn btn-soft-info" id="viewHoursButton">
-                            <i class="ri-eye-fill"></i> View Hours Available <!-- Botón para ver las horas disponibles -->
+                            <i class="ri-eye-fill"></i> Ver horas disponibles <!-- Botón para ver las horas disponibles -->
                         </button>
                     </div>
 
@@ -220,7 +228,7 @@
                             <div class="modal-content">
 
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="hoursModalgrid">Hours Available</h5>
+                                    <h5 class="modal-title" id="hoursModalgrid">Horas Disponibles</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
@@ -281,19 +289,30 @@
     </script>
 
     <script>
-                        function openOptionModal(appointmentId, appointmentConsultationId) {
-                        // Asignar los valores a los campos ocultos correspondientes
-                        document.getElementById('appointmentIdInput').value = appointmentId;
-                        document.getElementById('appointmentConsultationIdInput').value = appointmentConsultationId;
+            function openOptionModal(appointmentId, appointmentStatus) {
+            // Asignar los valores a los campos ocultos
+            document.getElementById('appointmentIdInput').value = appointmentId;
+            document.getElementById('appointmentStatus').value = appointmentStatus;
 
-                        // Opcional: mensajes de depuración
-                        console.log('Appointment ID set in modal:', appointmentId);
-                        console.log('Appointment consultation ID set in modal:', appointmentConsultationId);
+            // Obtener referencias a los botones
+            const consultaNormal = document.getElementById('startConsultCol');
+            const consultaSeguimiento = document.getElementById('startFollowupCol');
 
-                        // Mostrar el modal de opciones
-                        const optionModal = new bootstrap.Modal(document.getElementById('optionModal'));
-                        optionModal.show();
-                    }
+            // Ocultar ambos botones inicialmente
+            consultaNormal.style.display = 'none';
+            consultaSeguimiento.style.display = 'none';
+
+            // Mostrar el botón correspondiente según el estado
+            if (parseInt(appointmentStatus) === 1) {
+                consultaNormal.style.display = 'block';
+            } else if (parseInt(appointmentStatus) === 3) {
+                consultaSeguimiento.style.display = 'block';
+            }
+
+            // Mostrar el modal
+            const optionModal = new bootstrap.Modal(document.getElementById('optionModal'));
+            optionModal.show();
+        }
 
 
             function openRescheduleModal() {
@@ -478,23 +497,7 @@
         });
 
 
-                    //Filtrar boton iniciar cosulta
-                    document.addEventListener('DOMContentLoaded', function () {
-                    // Obtener el valor del campo oculto
-                    const appointmentConsultationId = document.getElementById('appointmentConsultationId').value;
-
-                    // Obtener el botón
-                    const startConsultationButton = document.querySelector('.btn-soft-dark');
-
-                    // Verificar si el campo tiene un valor
-                    if (!appointmentConsultationId) {
-                        // Ocultar el botón si no hay valor
-                        startConsultationButton.style.display = 'block';
-                    } else {
-                        // Mostrar el botón si hay valor
-                        startConsultationButton.style.display = 'none';
-                    }
-                });
+                
 
 
 
