--- a/ExpertMed/Views/Authentication/SignIn.cshtml
+++ b/ExpertMed/Views/Authentication/SignIn.cshtml
@@ -30,7 +30,7 @@
                     <div class="col-lg-12">
                         <div class="text-center mt-sm-5 mb-4 text-white-50">
                             <div>
-                                <a href="@Url.Action("Index", "Dashboard")" class="d-inline-block auth-logo">
+                                <a href="#" class="d-inline-block auth-logo">
                                     <img src="~/assets/images/LogoLogin.png" alt="" height="120">
                                 </a>
                             </div>
